# ReclaimedGridShells

./: .gitignore  README.md  enivronment_ubu.yml  environment.yml  environment_win.yml  multimesh_task_exec.py  multistock_task_exec.py  requirements.txt  requirements_ubu.txt  requirements_win.txt  single_task_exec.py
cpp/: CMakeLists.txt  draw_color_shell  draw_color_shell.cpp  draw_shell  draw_shell.cpp
meshes/: Blob.ply  Botanic.ply  Hall.ply  Manta.ply  Taut.ply  WaveAlt.ply  Xochimilco.ply
models/: networks.py
models/layers/: beam_matching_softmax_matrix.py  featured_mesh.py  geodlinear_layer.py  mesh.py
optim/: beam_batch_recycle_loss.py  beam_recycle_net_optimizer.py  structural_calculus.py
options/: multimeshing_recycle_optimizer_options.py  multistock_recycle_optimizer_options.py  recycle_optimizer_options.py
output/remeshing_cases/: Dolphin.ply
utils/: color_stock_hists.py  compute_remeshing.py  figure_utils.py  mesh_sampling_utils.py  reproducible_chamfer_distance.py  utils.py
